observability/HTTProute-alertmanager.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: alertmanager-route
  namespace: monitoring
spec:
  hostnames:
    - "alertmanager.thedevopsnow.online"
  parentRefs:
    - group: gateway.networking.k8s.io
      namespace: default
      kind: Gateway
      name: app-alb-gateway
      sectionName: http
    - group: gateway.networking.k8s.io
      namespace: default
      kind: Gateway
      name: app-alb-gateway
      sectionName: https
  rules:
    - backendRefs:
        - name: monitoring-kube-prometheus-alertmanager
          port: 9093
