observability/HTTProute-grafana.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  hostnames:
    - "grafana.thedevopsnow.online"
  parentRefs:
    - group: gateway.networking.k8s.io
      namespace: default
      kind: Gateway
      name: app-alb-gateway
      sectionName: http
    - group: gateway.networking.k8s.io
      namespace: default
      kind: Gateway
      name: app-alb-gateway
      sectionName: https
  rules:
    - backendRefs:
        - name: monitoring-grafana
          port: 80
