observability/HTTProute-kibana.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: kibana-route
  namespace: logging
spec:
  hostnames:
    - "kibana.thedevopsnow.online"
  parentRefs:
    - group: gateway.networking.k8s.io
      namespace: default
      kind: Gateway
      name: app-alb-gateway
      sectionName: http
    - group: gateway.networking.k8s.io
      namespace: default
      kind: Gateway
      name: app-alb-gateway
      sectionName: https
  rules:
    - backendRefs:
        - name: eck-kibana-kb-http
          port: 5601
