observability/HTTProute-prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: prometheus-route
  namespace: monitoring
spec:
  hostnames:
    - "prometheus.thedevopsnow.online"
  parentRefs:
    - group: gateway.networking.k8s.io
      namespace: default
      kind: Gateway
      name: app-alb-gateway
      sectionName: http
    - group: gateway.networking.k8s.io
      namespace: default
      kind: Gateway
      name: app-alb-gateway
      sectionName: https
  rules:
    - backendRefs:
        - name: monitoring-kube-prometheus-prometheus
          port: 9090
